# skyjo

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.claude/: settings.json
.github/instructions/: ci.instructions.md  frontend.instructions.md  general.instructions.md  rust.instructions.md  skyjo-core.instructions.md  skyjo-server.instructions.md  skyjo-wasm.instructions.md
.github/workflows/: docker.yml  frontend.yml  release.yml  rust.yml  server.yml
data/: skyjo.db-shm  skyjo.db-wal
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
frontend/: .gitignore  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: App.tsx  cache.ts  index.css  main.ts  main.tsx  realtime.ts  replay.ts  schemas.ts  styles.css  types.ts  worker.ts
migrations/: 001_initial.sql  002_users_auth.sql  003_leaderboard.sql  004_snapshot_normalization.sql  005_fix_num_rounds.sql
skyjo-core/: Cargo.toml
skyjo-core/src/: board.rs  card.rs  error.rs  game.rs  history.rs  interactive.rs  lib.rs  rules.rs  simulator.rs  strategy.rs
skyjo-core/tests/: deterministic_replay.rs  freeze_test.rs  full_game.rs  game_edge_cases.rs  going_out_penalty.rs  interactive_flow.rs  mixed_strategies.rs  reshuffle.rs  serialization.rs  simulator_stats.rs  (+1 more)
skyjo-server/: Cargo.toml
skyjo-server/src/: auth.rs  error.rs  genetic.rs  leaderboard.rs  lib.rs  lobby.rs  main.rs  messages.rs  persistence.rs  rate_limit.rs  room.rs  session.rs  ws.rs
skyjo-server/tests/: api_integration.rs  resilience.rs  security.rs  ws_integration.rs
skyjo-wasm/: Cargo.toml
(+90 files in other folders)
