[package]
name = "skyjo-server"
version = "0.1.0"
edition = "2024"

[dependencies]
skyjo-core = { path = "../skyjo-core" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "compression-gzip", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
rand = "0.9"
rayon = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
